2002-11-26  Sam Steingold  <sds@gnu.org>

	* list.d (list_length): new function
	(LIST-LENGTH, LIST-LENGTH-DOTTED): use it
	* subr.d, constsym.d (LIST-LENGTH-DOTTED): added
	* init.d (LIST-LENGTH-DOTTED): exported
	* describe.lisp (LIST-LENGTH-DOTTED): defined in list.d now

2002-11-25  Sam Steingold  <sds@gnu.org>

	* loop.lisp (expand-loop): when IT keyword is not appropriate,
	treat it as a variable and hope it is bound somewhere
	- THEREIS clause adds NIL to RESULTS to
	prevent ambiguity in the return values
	- when summing (or counting &c) into a variable for which the type has
	been declared, make sure it is initialized to that particular type

2002-11-25  Sam Steingold  <sds@gnu.org>

	* loop.lisp (loop-syntax-error, expand-loop): macro-expansion-time
	errors have type SOURCE-PROGRAM-ERROR

2002-11-25  Sam Steingold  <sds@gnu.org>

	use C standard I/O <stdio.h> instead of asciz_out() and friends
	* acorn.d, encoding.d, error.d, genclisph.d, io.d, misc.d:
	* msdos.d, pathname.d, socket.d, spvw.d, stream.d:
	do not include <stdio.h> here
	* lispbibl.d: include <stdio.h>
	(asciz_out, asciz_out_s, asciz_out_ss, asciz_out_1, asciz_out_2)
	(asciz_out_3, asciz_out_1_, asciz_out_2_, asciz_out_3_, dez_out)
	(dez_out_, hex_out, hex_out_, mem_hex_out): removed
	(STACK_diff): new macro
	(bt_beyond_stack_p): use it
	(OS_error, OBJECT_OUT, OS_file_error, OS_filestream_error):
	use fprintf(), fputs() &c instead of asciz_out() and friends
	(nobject_out): declare
	* affi.d (reg_call): ditto
	* amigaaux.d (abort, init_amiga): ditto
	* avl.d (AVL/out): ditto
	* erramiga.d, errunix.d, errwin32.d (errno_out): ditto
	* predtype.d (with_gc_statistics): ditto
	* rexx.d (debug_asciz_out, debug_out_1): ditto
	* spvw.d (SP_ueber, STACK_ueber, fsubr_argtype, subr_argtype)
	(fehler_code_alignment, init_subr_tab_1, init_module_2)
	(usage, main): ditto
	* spvw_alloca.d (malloca): ditto
	* spvw_allocate.d (error_speicher_voll, make_space_gc_true)